# hearts-of-modding

./: .gitignore  AGENTS.md  CHANGELOG.md  GEMINI.md  README.md  test.txt  test_arcswap.rs  test_color.hoi4  test_hover.rs  test_parse_name.rs  test_parse_real.rs
server/: Cargo.toml
server/Config/: effects.cwt  triggers.cwt
server/assets/: hoi4_data.json  hoi4_data_v2.json  modifier_formats.json  modifier_mappings.json  modifiers.json
server/src/: ability_scanner.rs  achievement_scanner.rs  adjacency_scanner.rs  advanced_validation.rs  ai_area_scanner.rs  ai_strategy_plan_scanner.rs  ast.rs  backend.rs  building_scanner.rs  call_hierarchy.rs  character_scanner.rs  code_action_handler.rs  color_utils.rs  completion_handler.rs  config.rs  continent_scanner.rs  country_scanner.rs  csv_parser.rs  defines_parser.rs  document_symbols.rs  enhanced_color.rs  entity_lookup.rs  event_scanner.rs  focus_scanner.rs  formatting.rs  fs_util.rs  gfx_scanner.rs  hoi4_data.rs  hover_handler.rs  idea_scanner.rs  ideology_scanner.rs  incremental_scanner.rs  interner.rs  loc_parser.rs  loc_preview.rs  log_level.rs  logistics_scanner.rs  lsp_convert.rs  lsp_handler.rs  main.rs  (+33 more)
server/src/data/: entity_lookup.rs  hoi4_data.rs  interner.rs  layered_value.rs  mod.rs  scanner_data.rs
server/src/formatter/: mod.rs  serialize.rs  transform.rs
server/src/lsp/: call_hierarchy.rs  code_action_handler.rs  completion_handler.rs  document_symbols.rs  handler.rs  hover_handler.rs  mod.rs  rename.rs  semantic_tokens.rs  workspace_symbols.rs
server/src/parser/: ast.rs  defines_parser.rs  loc_parser.rs  mod.rs  parser.rs
server/src/rules/: abilities.rs  achievements.rs  ai_areas.rs  buildings.rs  characters.rs  country_metadata.rs  country_tags.rs  decisions.rs  events.rs  gfx_textures.rs  ideas.rs  ideologies.rs  localization.rs  mod.rs  oob_regiments.rs  portraits.rs  provinces.rs  sounds.rs  sprites.rs  state_definitions.rs  terrains.rs  traits.rs  v2_scope.rs  visitor.rs
server/src/scanner/: ability_scanner.rs  achievement_scanner.rs  adjacency_scanner.rs  ai_area_scanner.rs  ai_strategy_plan_scanner.rs  mod.rs  (+36 more)
(+65 files in other folders)
