[package]
name = "server"
version = "0.15.1"
edition = "2024"

[dependencies]
tower-lsp-server = "0.23.0"
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.150"
nom = "8.0.0"
nom_locate = "5.0.0"
dashmap = { version = "6.2.1", features = ["serde"] }
once_cell = "1.18"
regex = "1.10"
futures = "0.3"
sysinfo = "0.39.3"
base64 = "0.22"
arc-swap = "1.9.1"
paste = "1.0.15"
tikv-jemallocator = "0.6"

[patch.crates-io]
tikv-jemalloc-sys = { git = "https://github.com/emberglazee/jemallocator", rev = "c74b240" }
tikv-jemallocator = { git = "https://github.com/emberglazee/jemallocator", rev = "c74b240" }

[profile.release]
strip = true
lto = "thin"
