[package]
name = "server"
version = "0.21.0"
edition = "2024"

[dependencies]
tower-lsp-server = "0.23.0"
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.150"
nom = "8.0.0"
nom_locate = "5.0.0"
dashmap = { version = "6.2.1", features = ["serde"] }
once_cell = "1.18"
regex = "1.12.4"
futures = "0.3"
sysinfo = "0.39.3"
base64 = "0.22"
arc-swap = "1.9.1"
paste = { package = "pastey", version = "0.2" }
rustc-hash = "2.1.2"
smallvec = "1.15.2"
tikv-jemallocator = "0.7.0"
tokio-util = "0.7.18"

[patch.crates-io]
tikv-jemalloc-sys = { git = "https://github.com/emberglazee/jemallocator", rev = "da06d4a" }
tikv-jemallocator = { git = "https://github.com/emberglazee/jemallocator", rev = "da06d4a" }

[profile.release]
strip = true
lto = "thin"
